--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
         }
     </script>
 <title>GMN</title></head>
-<body BGCOLOR="#ffe6f3">
+<body BGCOLOR="#ffffff">
 <center>
     <h1>最初の一文を入力したらそれに続く文章を作ってくれるサイト</h1>
 
     <br>
-<div><textarea id="pre" rows="10" cols="40" style="font-size:40px;"></textarea><input type="submit" value="生成する" onclick="genstart()"></size>
+<div><textarea id="pre" rows="10" cols="40" style="font-size:30px;"></textarea><input type="submit" value="生成する" onclick="genstart()"></size>
 <div>
-    <p>単語より文のほうが自然な文章が生成されます</p>
+    <p>　　　　単語より文のほうが自然な文章が生成されます。
+  　　　<br>
+      実行してから少し待たないと生成されません
+      <外で見ることを前提に軽くなるように凝ってないのにそれが理解できないバカは土にどうぞ>
+  　　　</p>
 </div>
 </center>
 </body>
