--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p>　　　　単語より文のほうが自然な文章が生成されます。
   　　　<br>
       実行してから少し待たないと生成されません
-      <外で見ることを前提に軽くなるように凝ってないのにそれが理解できないバカは土にどうぞ>
+      <br外で見ることを前提に軽くなるように凝ってないのにそれが理解できないバカは土にどうぞ>
   　　　</p>
 </div>
 </center>
