--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         }
     </script>
 <title>GMN</title></head>
+  <BODY BACKGROUND="Atlas.jpg">
 <body BGCOLOR="#ffffff">
 <center>
     <h1>最初の一文を入力したらそれに続く文章を作ってくれるサイト</h1>
