--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <p>　　　　単語より文のほうが自然な文章が生成されます。
   　　　<br>
       実行してから少し待たないと生成されません
+        <br>
+        生成が一度終わったらもう一度押すと生成された文章の続きが生成されます
       <br外で見ることを前提に軽くなるように凝ってないのにそれが理解できないバカは土にどうぞ>
   　　　</p>
 </div>
