--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script>
         function genstart(){
             const pre = document.getElementById("pre").value
-            var url = " https://integral-installing-breath-existence.trycloudflare.com?pre="+pre
+            var url = "https://google-personal-hot-yr.trycloudflare.com/?pre="+pre
             var xhr = new XMLHttpRequest();
             xhr.open("GET", url);
             xhr.onload = function() {
@@ -16,18 +16,17 @@
 <title>GMN</title></head>
   <BODY BACKGROUND="Autumn.jpg">
 <body BGCOLOR="#ffffff">
-<center><h1>最初の一文を入力したらそれに続く文章を作ってくれるサイト</h1>
+<center>
+    <h1>最初の一文を入力したらそれに続く文章を作ってくれるサイト</h1>
+
     <br>
-<div><textarea type="text" value="" placeholder="昔々あるところにおじいさんとおばあさんが"　　id="pre" rows="10" cols="40" style="font-size:40px;"></textarea><input type="submit" value="生成する" onclick="genstart()"></size>
+<div><textarea id="pre" rows="10" cols="40" style="font-size:40px;"></textarea><input type="submit" value="生成する" onclick="genstart()"></size>
 <div>
-    <p>
-     単語より文のほうが自然な文章が生成されます。
+    <p>　　　　単語より文のほうが自然な文章が生成されます。
   　　　<br>
-      実行してから少し待たないと生成されませんご注意ください。
-      <br>
-      生成が一度終わったらもう一度押すと生成された文章の続きが生成されます
-      <br>
-      ＊英語には対応しておりませんご了承ください。
+      実行してから少し待たないと生成されません
+        <br>
+        生成が一度終わったらもう一度押すと生成された文章の続きが生成されます
       <br外で見ることを前提に軽くなるように凝ってないのにそれが理解できないバカは土にどうぞ>
   　　　</p>
 </div>
